make slot fields required
